# futures

./: CMakeLists.txt  arangodb.h  main.cpp
.github/workflows/: cmake.yml
include/futures/: completion-queue.h  expected.h  futures.h  traits.h  utilities.h
include/mellon/: completion-queue.h  expected.h  futures.h  locks.h  sequencer.h  traits.h  utilities.h
include/mellon/detail/: box.h  continuation.h  gadgets.h  prototype.h
include/mellon/impl/: extensions.h
src/: futures.cpp
test/: CMakeLists.txt  exception-tests.cpp  fuzzer-test.cpp  iterative-resolution.cpp  locks.cpp  sequencer-test.cpp  static-tests.cpp  swap-test.cpp  test-helper.h  user-defined.cpp
